--- a/project-1.html
+++ b/project-1.html
@@ -14,13 +14,12 @@
          <a href="" class="btn">مشاهده</a>    
     </div>
     <div class="gallery">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
+        <img src="images (1).jpeg" alt="">
+        <img src="images (2).jpeg" alt="">
+        <img src="images (3).jpeg" alt="">
+        <img src="images (4).jpeg" alt="">
+        <img src="images.jpeg" alt="">
+       
     </div>
 </body>
 </html>
