--- a/file-1/project-1.html
+++ b/file-1/project-1.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>progect1</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="header-content">
         <h1>زیبایی های شگفت انگیز جهان را کشف کنید</h1>
+        <hr>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium nihil doloremque pariatur in.
              Excepturi laboriosam necessitatibus magnam temporibus dicta incidunt fugiat molestias ducimus eveniet consequatur, 
              deleniti neque architecto, officia laborum.</p>
@@ -18,6 +20,9 @@
         <img src="images (2).jpeg" alt="">
         <img src="images (3).jpeg" alt="">
         <img src="images (4).jpeg" alt="">
+        <img src="images.jpeg" alt="">
+        <img src="عکس-فانتزی-طبیعت-20.jpg" alt="">
+        <img src="عکس-پروفایل-طبیعت-2-500x625.jpg" alt="">
         <img src="images.jpeg" alt="">
        
     </div>
